tests/fail/node-ext3.dit
A {}
B {
    extends A, A;
}